samples/_failures_safe/1761555905_139fb9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_438527f7.c: In function ‘main’:
./samples/SAFE/__tmp_438527f7.c:151:16: error: missing terminating " character
  151 |         printf("Error reading
      |                ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_438527f7.c:151:9: error: expected expression at end of input
  151 |         printf("Error reading
      |         ^~~~~~
./samples/SAFE/__tmp_438527f7.c:151:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_438527f7.c:151:9: error: expected declaration or statement at end of input
